adicionei mais um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Duarte</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam consequatur neque iure tenetur fugit est adipisci, aliquid rem nulla enim quae repellat molestiae iste provident voluptates quaerat suscipit. Quos, dicta?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, molestias ab earum corporis inventore architecto ipsa? Ducimus, itaque tempora aspernatur suscipit minima enim soluta explicabo quisquam quaerat excepturi tempore recusandae.</p>
 </body>
 </html>
